<resources>
    <string name="app_name">Player Full Screen</string>
    <string name="share_book">share book</string>
    <string name="close_player">close player</string>
    <string name="book_cover_photo">book cover photo</string>
    <string name="play_next">Play Next</string>
    <string name="play_previous">Play previous</string>
    <string name="play_pause_control">play pause control</string>
    <string name="book_thumbnail_image">Book Thumbnail Image</string>
    <string name="rewind">rewind by 30</string>
    <string name="fast_forward">fast forward by 30</string>
    <string name="book_chapter_progress_title">Section %d of %d</string>
    <string name="buffer_text">Buffering ...</string>
</resources>
